--- a/client/index.html
+++ b/client/index.html
@@ -10,5 +10,6 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
+    <script src="https://apis.google.com/js/api:client.js"></script>
   </body>
 </html>
